--- a/calculater/index.html
+++ b/calculater/index.html
@@ -66,7 +66,7 @@
   <footer>
   <div class="footer-container">
     <div class="footer-left">
-      <h3>Star Sudh Bhojnaliya</h3>
+      <h3>Dhruv Chauhdary</h3>
       <p>© 2025 All rights reserved.</p>
     </div>
     <div class="footer-right">
