--- a/calculater/index.html
+++ b/calculater/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Navbar with Background Video</title>
+  <title>calculator</title>
 <link rel="stylesheet" href="all.css">
 </head>
 <body>
